--- a/css/stylemovil.css
+++ b/css/stylemovil.css
@@ -29,6 +29,9 @@ header{
     padding-left: 100px;
     /*margin-right: 0px;*/
 }
+.menu-button{
+    display: none;
+}
 
 .container-logo-title{
     display: flex;
@@ -152,235 +155,110 @@ header{
 
 }
 
-/*
-.icon-menu{
-    display: none;
-}
 
-main{
-    width: 100%;
-    max-width: 1220px;
-    margin: auto;
-    position: relative;
-    top: 100px;
-}
-
-article{
-    padding: 20px;
-}
-
-article h1{
-    font-size: 40px;
-    font-weight: 100;
-}
-
-article p{
-    font-size: 18px;
-    margin-top: 20px;
-}
-
-.container-bg{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-
-.bg1{
-    width: 100%;
-    max-width: 300px;
-    height: 180px;
-    background-image: url(http://thewallpaper.co/wp-content/uploads/2016/11/Free-Laptop-Image-hd-wallpapers-background-photos-windows-mac-wallpapers-amazing-best-wallpaper-ever-wallpaper-for-iphone-download-1920x1200.jpg);
-    background-position: center center;
-    background-size: cover;
-    margin: 10px;
-}
-
-.bg2{
-    width: 100%;
-    max-width: 300px;
-    height: 180px;
-    background-image: url(https://4.bp.blogspot.com/-LnRFLDACBlQ/WO5rTjGz1zI/AAAAAAACK_s/Zc1LOahMjD0cR_RfkTHvhlu2ZDKPkIr-ACPcB/s0/Macbook_Pro_img.jpg);
-    background-position: center center;
-    background-size: cover;
-    margin: 10px;
-}
-
-.bg3{
-    width: 100%;
-    max-width: 300px;
-    height: 180px;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaZFFl6eSwfx1_gmZUFltDNnloQrcSg0jj1fYpXP2a75R941b0);
-    background-position: center center;
-    background-size: cover;
-    margin: 10px;
-}
-
-.bg4{
-    width: 100%;
-    max-width: 300px;
-    height: 180px;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ49jddws5q8ILcVSGzC6Qr3LNTLb06X08jQ-l5emgOv61cMNmgtw);
-    background-position: center center;
-    background-size: cover;
-    margin: 10px;
-}
-*/
-
-@media screen and (max-width: 1000px){
-
-.container-menu{    
-    background-color: #2D2F30;     
-}
-.menu{    
-    width: auto;
-    height: 100vh;        
-    position: fixed;
-    top: 0px;
-    background-color: #2D2F30;     
-    margin-top: 0px;
-}
-    /*
-    .menu ,ul{
-        flex-direction: column;
-    }*/
-
-.menu-ul{        
-    flex-direction: column;
-}
-
-/*
-.menu ul li ,ul{
-    position:relative;
-}
-*/
-.submenu-ul{
-    width: 100%;
-    position: relative;
-    background-color: #2D2F30; 
-    border: none;  
-    padding: 2px; 
-    
-}
-.submenu-ul-li{
-    border-bottom:  1px solid #52525252;
+@media screen and (max-width: 700px){  
         
-}
-.submenu-ul :hover{
-    border: 1px solid transparent;
-    border-top: 4px, solid transparent;       
-}
-.menu ul li ul ,li:hover{
-    background-color: #363636;
-}
-/*
-.menu ul li ul li ul{
-    position: relative;
-}*/
-.submenu-web-ul-li-ul{  
-    width: 100%;
-    border-bottom: 1px, solid #414141;        
-    position: relative;      
-    border: none;    
-    left: 0px; 
-
-}
-
-}
-/*
-@media screen and (max-width: 1000px){
-    
     header{
-        height: 60px;
+        height: max-content;
     }
-    
-    .container-logo-title{
-        height: 60px;
-        margin-top: 10px;
-    }
-    
-    .container-logo-title img{
-        width: 40px;
-        height: 40px;
-    }
-    
-    .container-logo-title h1{
-        font-size: 20px;
-        margin-top: 6px;
-    }
-    
-    
-    .icon-menu{
+    .container-header{      
+        padding: 0px 0px 0px 0px;          
+        position: relative;
+            
+    }   
+    .menu-button{        
         display: block;
-        position: absolute;
-        right: 10px;
-        top: 60px;
-        font-size: 30px;
+    }     
+    .menu-button i{    
+        font-size: 1.9em;
+        margin-top: 18px;            
+        display: relative;
     }
+   
     
-    body{
-        transition: all 300ms;
+    .container-logo-title{   
+        display: flex;
+        margin: auto;        
+        justify-content: center;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 0px;
+        margin-top: 0px;
+        font-size: 0.8em;        
     }
-    
-    .body2{
-        transform: translateX(-300px);
+    .container-logo-title img{               
+        padding-top: 10px;
+        width: 15%;
+        height: 15%;
     }
-    .menu{
-        width: 300px;
-        height: 100vh;
+   
+    .container-logo-title ,h1{   
+        font-size: 0.1em;
+    }
+    .container-menu{       
+        display: none;    
+        margin-top: 0px;
+        margin-left: -10px;
+        top: 0; 
+        width: 200px;
+        position: fixed;
+        background-color: #2D2F30;         
+    }
+    .menu{    
+
+        width: auto;                             
         position: fixed;
         top: 0px;
-        right: -300px;
-        background: #2D2F30;
-        margin-top: 0px;
-        overflow-y: scroll;
-    }
-    
-    .menu ul{        
-        flex-direction: column;
-        display: flex;
-    }
-    
-    .menu ul li{
-        padding: 10px 20px;
-    }
-    
-    .menu ul li ,ul{
-        top: 0;
-        border-bottom: 1px solid transparent;
-        background: #2D2F30;
-    }
-    
-    .menu ul li:hover{
-        border: 1px solid transparent;
-        border-top: 4px solid transparent;
-    }
-    
-    .menu ul li ul{
-        width: 100%;
-        position: relative;
-        border: none;
-        padding: 2px; 
-    }
-    
-    .menu ul li ul li{
-        border-bottom: 1px solid #414141;
-    }
-    
-    .menu ul li ul li:hover{
-        background: #363636; 
-    }
-    
-    .menu ul li ul li ul{
-        width: 100%;
-        position: relative;
         left: 0px;
-        top: 6px;
+        background-color: #2D2F30;     
+        margin-top: 0px;    
     }
-    
-    article{
-        text-align: center;
-    }
-}
+        /*
+        .menu ,ul{
+            flex-direction: column;
+        }*/
 
-/* css mainold*/ 
+    .menu-ul{        
+        flex-direction: column;
+    }
+    .menu-ul li{
+        color: white;
+    }
+    /*
+    .menu ul li ,ul{
+        position:relative;
+    }
+    */
+    .submenu-ul{    
+        width: 100%;
+        position: relative;
+        background-color: #2D2F30; 
+        border: none;  
+        padding: 2px; 
+        
+    }
+    .submenu-ul-li{    
+        border-bottom:  1px solid #52525252;    
+            
+    }
+    .submenu-ul :hover{
+        border: 1px solid transparent;
+        border-top: 4px, solid transparent;       
+    }
+    .menu ul li ul ,li:hover{
+        background-color: #363636;
+    }
+    /*
+    .menu ul li ul li ul{
+        position: relative;
+    }*/
+    .submenu-web-ul-li-ul{  
+        width: 100%;
+        border-bottom: 1px, solid #414141;        
+        position: relative;      
+        border: none;    
+        left: 0px; 
+
+    }
+
+}
