--- a/css/main.css
+++ b/css/main.css
@@ -11,12 +11,11 @@ main{
 	animation-duration: 0.2s;
 }
 
-#img-home{			
+#img-home{	
 	margin-top: 60px;
-	width: 30%;
-	border-radius: 60%;   
-	box-shadow: 0px 0px 40px -5px; 
-	box-shadow: none;	 
+	width: 100%;
+	border-radius: 60%;   	
+	box-shadow: none;	 			
 }
 
 nav{
@@ -134,21 +133,24 @@ h2{
 }
 @media screen and (max-width: 700px){
 	
-	#img-home{	
-		margin-top: 10px;		
-		width: 100%;
-		height: auto;
-		border-radius: 60%;   
-		box-shadow: 0px 0px 40px -5px; 
-		box-shadow: none;	 
+
+	.info-container{	
+		padding: 0px 0px 0px 0px;
+		text-align: center;		
+		margin-top: 80px;				
 	}
-	.info-container{
-		text-align: center;
-		margin-top: 80px;
+
+
+	#img-home{			
+		margin-top: 10px;	
+		min-width: 340px; 
+		min-height: auto;		
+		padding-left: -20px;				
+		padding-margin: -20px;
+		/*box-shadow: 0px 0px 40px -5px; 	*/
+		box-shadow: none;	
 	}
-	.info-container {
-		font-size: 0.6em;		
-	}		
+
 	
 }
 	
