--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,17 @@ body{
 	font-family: 'Zilla Slab', serif;
 }
 main{
+	justify-content: center;
 	padding: 10px;
 }
 #zumbido {
 	
 }
-
+#info-title{
+	color: #E0A023;
+	margin-top: 20px;
+	font-size: 5em;
+}
 #zumbido:active {	
 	animation: step-start;
 	animation-duration: 0.2s;
@@ -17,7 +22,7 @@ main{
 
 #img-home{	
 	margin-top: 60px;
-	width: 100%;
+	width: 40%;
 	border-radius: 60%;   	
 	box-shadow: none;	 			
 }
@@ -135,6 +140,33 @@ h2{
 	text-align: center;
 	 margin-top: 80px;
 }
+.cards-container{
+	justify-content: center;
+	width: auto;
+	display: flex;	
+	flex-direction: row;		
+	flex-wrap: wrap;	
+}
+
+figure{
+	min-width: 320px;	
+	max-width: 320px;	
+	margin: 10px;
+	background-color: rgb(219, 216, 216);
+	border-radius: 20px;
+	border-width: 200px;
+	padding: 10px;
+	padding-top: 20px;	
+}
+figure img{	
+	width: 50%;
+}
+#iframe-map{		
+	width : 600px;
+	height : 500px;
+	border-radius: 10px;
+}	
+
 @media screen and (max-width: 700px){
 	
 
@@ -154,7 +186,34 @@ h2{
 		/*box-shadow: 0px 0px 40px -5px; 	*/
 		box-shadow: none;	
 	}
+	#info-title{
+		font-size: 3em;
+	}
+	.img-logo{
+		width: 20%;		
+	}
 
+	.cards-container{
+		width: 100%;
+		display: block;
+	}
+
+	figure{
+		background-color: rgb(163, 163, 163);
+		border-radius: 20px;
+		border-width: 200px;
+		padding: 10px;
+		padding-top: 20px;
+		border: rgb(3, 3, 3);		
+	}
+	figure img{	
+		width: 50%;
+	}
+
+	#iframe-map{		
+		width : 350px;
+		height : 350px;		
+	}	
 	
 }
 	
