--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ main{
 
 #img-home{	
 	margin-top: 60px;
-	width: 40%;
+	width: 30%;
 	border-radius: 60%;   	
 	box-shadow: none;	 			
 }
@@ -137,14 +137,21 @@ h2{
 	text-align: center;
 	 margin-top: 80px;
 }
+.img-logo{	
+	width: 9%;		
+}
+
 .cards-container{
 	text-align: center;
 	justify-content: center;
 	width: auto;
 	display: flex;	
 	flex-direction: row;		
-	flex-wrap: wrap;	
-}
+	flex-wrap: wrap;		
+  }
+
+
+
 
 figure{
 	min-width: 320px;	
@@ -155,7 +162,25 @@ figure{
 	border-width: 200px;
 	padding: 10px;
 	padding-top: 20px;	
+	
 }
+.div-figure{	
+	max-height: 250px;
+	overflow: hidden;
+	padding-bottom: 20px;
+}
+
+figure:active{
+}
+
+
+figure:hover{
+	border: 1px solid #e2e2e2;
+	padding: 10px;
+	box-shadow: 2px 2px 4px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
+}
+
+
 figure img{	
 	width: 50%;
 }
@@ -165,22 +190,25 @@ figure img{
 	border-radius: 10px;
 }	
 
+.nav-barra-inferior{
+	padding: 0px 0px 0px 0px;
+	text-align: center;		
+	margin-top: 10px;
+}
+
+/*///////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////*/
 @media screen and (max-width: 700px){
 	
-
-	.info-container{	
-		padding: 0px 0px 0px 0px;
-		text-align: center;		
-		margin-top: 80px;				
-	}
-
 
 	#img-home{			
 		margin-top: 10px;	
 		min-width: 340px; 
 		min-height: auto;		
-		padding-left: -20px;				
-		padding-margin: -20px;
+		padding-left: -20px;						
 		/*box-shadow: 0px 0px 40px -5px; 	*/
 		box-shadow: none;	
 	}
@@ -196,13 +224,30 @@ figure img{
 		
 	}
 
-	figure{		
+	figure{				
 		border-radius: 20px;
 		border-width: 200px;
 		padding: 10px;
-		padding-top: 20px;
-		border: rgb(3, 3, 3);		
+		padding-top: 20px;		
+			
 	}
+	.div-figure{		
+		max-height: 250px;
+		overflow: hidden;
+		padding-bottom: 20px;
+	}
+	.div-figure:hover{
+		max-height: max-content;		
+		overflow: hidden;
+		padding-bottom: 20px;
+	}
+	
+	figure:active{					
+		border: 1px solid #e2e2e2;
+		padding: 10px;
+		box-shadow: 5px 5px 8px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
+	}	
+
 	figure img{	
 		width: 50%;
 	}
