--- a/css/stylemovil.css
+++ b/css/stylemovil.css
@@ -154,7 +154,10 @@ header{
     top: 0px;
 
 }
-
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 @media screen and (max-width: 700px){  
         
@@ -167,8 +170,9 @@ header{
             
     }   
     .menu-button{        
-        display: block;
+        display: block;        
     }     
+        
     .menu-button i{    
         font-size: 1.9em;
         margin-top: 18px;            
@@ -206,7 +210,6 @@ header{
         background-color: #2D2F30;         
     }
     .menu{    
-
         width: auto;                             
         position: fixed;
         top: 0px;
