--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
-body{	
+body{		
 	font-family: 'Kaushan Script', cursive;
 	font-family: 'Lato', sans-serif;
 	font-family: 'Zilla Slab', serif;
 }
-main{
-	padding: 10px;		
+main{				
+	padding: 10px;				
 }
-
+.conten
 #info-title{
 	color: #E0A023;
 	margin-top: 20px;
@@ -202,8 +202,8 @@ figure img{
 /*///////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////*/
-@media screen and (min-width: 700px){
-	
+@media screen and (min-width: 700px){	
+
 	.div-figure{		
 		z-index: 20;	
 		border-radius: 20px;
@@ -225,13 +225,32 @@ figure img{
 		padding-bottom: 20px;
 		box-shadow: 2px 2px 4px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
 	}
+	#beepc{	
+		display: none;				
+	}	
 	
 }
 /*movil///////////////////////////////////////////*/
 /*movil///////////////////////////////////////////*/
-@media screen and (max-width: 700px){
-	
+@media screen and (max-width: 700px){	 
 
+	#beepc{					
+		width:  8%;
+		position: fixed;
+		bottom: 2px ;	
+		right: 7.5px;
+		opacity: 0.5;
+		z-index: 1;
+		
+	}		
+
+	#beepc:active{					
+		width:  8.5%;		
+		opacity: 1;		
+		zoom: 50%;
+		
+	}		
+	
 	#img-home{			
 		margin-top: 10px;	
 		min-width: 340px; 
