--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body{
 	font-family: 'Kaushan Script', cursive;
 	font-family: 'Lato', sans-serif;
 	font-family: 'Zilla Slab', serif;
+	
 }
 main{				
 	padding: 10px;				
@@ -196,27 +197,7 @@ figure img{
 	width: 500px; ; 
 	margin: auto; 
 }
-.div-figure{		
-	z-index: 20;	
-	border-radius: 20px;
-	background-color: rgb(219, 216, 216);
-	max-height: 250px;
-	overflow: hidden;
-	padding-bottom: 20px;
-	margin-left: -10px;	
-	padding: 0px 5px;			
-	transition: box-shadow 300ms;	
-	transition-duration: 0s ;
-}
 
-.div-figure:hover{		
-	background-color: rgb(216, 216, 216);		
-	position: absolute;
-	max-height: max-content;
-	overflow: visible;
-	padding-bottom: 20px;
-	box-shadow: 2px 2px 4px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
-}
 /*///////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////*/
@@ -224,68 +205,6 @@ figure img{
 /*///////////////////////////////////////////////////////////////////*/
 @media screen and (min-width: 700px){	
 
-	
-	#beepc{	
-		display: none;				
-	}	
-	
-}
-/*movil///////////////////////////////////////////*/
-/*movil///////////////////////////////////////////*/
-@media screen and (max-width: 700px){	 
-
-	#beepc{					
-		width:  8%;
-		position: fixed;
-		bottom: 2px ;	
-		right: 7.5px;
-		opacity: 0.5;
-		z-index: 1;
-		
-	}		
-
-	#beepc:active{					
-		width:  8.5%;		
-		opacity: 1;		
-		zoom: 50%;
-		
-	}		
-	
-	#img-home{			
-		margin-top: 10px;	
-		min-width: 340px; 
-		min-height: auto;		
-		padding-left: -20px;						
-		/*box-shadow: 0px 0px 40px -5px; 	*/
-		box-shadow: none;	
-	}
-	#info-title{
-		font-size: 3em;
-	}
-	.img-logo{
-		width: 20%;		
-	}
-
-	.cards-container{		
-		width: 100%;		
-	}		
-	figure{				
-		border-radius: 20px;
-		border-width: 200px;
-		padding: 10px;
-		padding-top: 20px;		
-			
-	}
-	.div-figure{		
-		max-height: 250px;
-		overflow: hidden;
-		padding-bottom: 20px;
-	}
-	.div-figure:hover{
-		max-height: max-content;		
-		overflow: hidden;
-		padding-bottom: 20px;
-	}
 	.div-figure{		
 		z-index: 20;	
 		border-radius: 20px;
@@ -307,12 +226,81 @@ figure img{
 		padding-bottom: 20px;
 		box-shadow: 2px 2px 4px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
 	}
-	/*
-	figure:active{							
+	#beepc{	
+		display: none;				
+	}	
+	
+}
+/*movil///////////////////////////////////////////*/
+/*movil///////////////////////////////////////////*/
+@media screen and (max-width: 700px){	 
+
+	#beepc{					
+		width:  8%;
+		position: fixed;		
+		bottom: 2px ;	
+		right: 7.5px;
+		opacity: 0.5;		
+		z-index: 30;
+		
+	}		
+
+	#beepc:active{			
+		position: fixed;			
+		width:  8.5%;		
+		opacity: 1;				
+		
+	}		
+	
+	#img-home{			
+		margin-top: 10px;	
+		min-width: 340px; 
+		min-height: auto;		
+		padding-left: -20px;						
+		/*box-shadow: 0px 0px 40px -5px; 	*/
+		box-shadow: none;	
+	}
+	#info-title{
+		font-size: 3em;
+	}
+	.img-logo{
+		width: 20%;		
+	}
+
+	.cards-container{		
+		width: 100%;		
+	}	
+		
+	figure{		
+		max-height: 270px;		
+		overflow: hidden;
+		border-radius: 20px;
+		border-width: 200px;
+		padding: 10px;
+		padding-top: 20px;		
+			
+	}
+	figure:hover{		
+		max-height: max-content;				
 		padding: 10px;
 		box-shadow: 5px 5px 8px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
-	}	*/
+	}	
 
+	/*
+	.div-figure{		
+		max-height: 250px;
+		overflow: hidden;
+		position: relative;
+		padding-bottom: 20px;
+	}
+	
+	.div-figure:hover{
+		max-height: max-content;		
+		overflow: hidden;
+		padding-bottom: 20px;
+	}
+	*/
+	
 	figure img{	
 		width: 50%;
 	}
