--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body{
 	font-family: 'Kaushan Script', cursive;
 	font-family: 'Lato', sans-serif;
 	font-family: 'Zilla Slab', serif;
+	-webkit-user-select: none;
 	
 }
 main{				
