--- a/css/main.css
+++ b/css/main.css
@@ -199,6 +199,9 @@ figure img{
 	width: 500px; ; 
 	margin: auto; 
 }
+.img-tercio{
+	width: 500px;
+}
 
 /*///////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////*/
