--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,7 @@ figure{
 	position: relative;
 	min-width: 320px;	
 	max-width: 320px;	
+	max-height: max-content;
 	margin: 10px;
 	background-color: rgb(219, 216, 216);
 	border-radius: 20px;
@@ -173,14 +174,14 @@ figure{
 	padding-top: 20px;		
 	
 }
-/*
+
 figure:hover{	
 	position: relative;	
 	padding: 10px;
 	box-shadow: 2px 2px 4px #bbbab8, 10px 10px 10px rgb(141, 141, 141);		
 }
 
-*/
+
 figure img{	
 	width: 50%;
 }
@@ -203,8 +204,54 @@ figure img{
 	width: 500px;
 	margin: auto;
 }
+
+.div-figure{	
+	transition: all 300ms;	
+	z-index: 20;	
+	border-radius: 20px;
+	background-color: rgb(219, 216, 216);
+	max-height: 250px;
+	overflow: hidden;
+	padding-bottom: 20px;
+	margin-left: -10px;	
+	padding: 0px 5px;			
+	transition: box-shadow 300ms;		
+}
 #text{
 	display:none;
+	font-size: 16px;
+}
+#text2{
+	display:none;
+	font-size: 16px;
+}
+#text3{
+	display:none;
+	font-size: 16px;
+}
+#text4{
+	display:none;
+	font-size: 16px;
+}
+#text5{
+	display:none;
+	font-size: 16px;
+}
+#text6{
+	display:none;
+	font-size: 16px;
+}
+#text7{
+	display:none;
+	font-size: 16px;
+}
+#text8{
+	display:none;
+	font-size: 16px;
+}
+#text9{
+	display:none;
+	font-size: 16px;
 }
 
 /*///////////////////////////////////////////////////////////////////*/
@@ -214,18 +261,6 @@ figure img{
 /*///////////////////////////////////////////////////////////////////*/
 @media screen and (min-width: 700px){	
 
-	.div-figure{		
-		z-index: 20;	
-		border-radius: 20px;
-		background-color: rgb(219, 216, 216);
-		max-height: 250px;
-		overflow: hidden;
-		padding-bottom: 20px;
-		margin-left: -10px;	
-		padding: 0px 5px;			
-		transition: box-shadow 300ms;	
-		transition-duration: 0s ;
-	}
 	
 	.div-figure:hover{		
 		background-color: rgb(216, 216, 216);		
@@ -296,18 +331,7 @@ figure img{
 		min-height: 305px;		
 		max-height: 305px;
 		padding: 10px;		
-	}	
-	
-	.div-figure{		
-		z-index: 10;	
-		border-radius: 20px;		
-		max-height: 240px;
-		overflow: hidden;
-		padding-bottom: 20px;
-		margin-left: -10px;	
-		padding: 0px 5px;			
-		transition: box-shadow 300ms;	
-		transition-duration: 0s ;
+	}		
 	
 	} 
 	.div-figure:hover{		
