--- a/css/stylemovil.css
+++ b/css/stylemovil.css
@@ -14,11 +14,11 @@ header{
     position: fixed;
     z-index: 100;
     background: white;
-    top: 0;
+    top: 0;    
            
 }
 
-.container-header{
+.container-header{    
     width: 100%;
     max-width: 1220px;    
     display: flex;
@@ -28,9 +28,6 @@ header{
     padding-right: 100px;
     padding-left: 100px;
     /*margin-right: 0px;*/
-}
-.menu-button{
-    display: none;
 }
 
 .container-logo-title{
@@ -50,219 +47,279 @@ header{
     margin-left: 10px;
 }
 
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+@media screen and (min-width: 700px){	
+    .container-menu-movil{
+        display: none;
+
+    }
+    
 .container-menu{
-/*    display: flex;*/
-    margin-top: 20px;
-}
-
-.menu{
-    position: absolute;
-    right: 10px;
-    margin-top: 20px;    
-}
-
-.menu ,ul{     
-    display: flex;
-}
-
-.menu ul ,li{
-    list-style: none;
-    font-size: 12px;    
-    color: black;
-    padding: 20px 10px;
-    border: 1px solid transparent;
-    border-top: 4px solid transparent;
-    cursor: pointer;
-    transition: border 300ms;
-    position: relative;
-}
-
-.menu ul li label,
-.menu ul li Span{
-    color: #868686;
-}
-
-.menu ul  ,li:hover{
-    border: 1px solid #eeeeee;    
-    border-top: 4px solid #F2D02F;    
+    /*    display: flex;*/
+        margin-top: 20px;
+    }
+    
+    .menu{
+        position: absolute;
+        right: 10px;
+        margin-top: 20px;    
+    }
+    
+    .menu ,ul{     
+        display: flex;
+    }
+    
+    .menu ul ,li{
+        list-style: none;
+        font-size: 12px;    
+        color: black;
+        padding: 20px 10px;
+        border: 1px solid transparent;
+        border-top: 4px solid transparent;
+        cursor: pointer;
+        transition: border 300ms;
+        position: relative;
+    }
+    
+    .menu ul li label,
+    .menu ul li Span{
+        color: #868686;
+    }
+    
+    .menu ul  ,li:hover{
+        border: 1px solid #eeeeee;    
+        border-top: 4px solid #F2D02F;    
+        
+    }
+    
+    .menu ul li ,span{
+        font-size: 14px;
+        position: relative;    
+    }
+    
+    .menu ul li ,label{
+        font-size: 25px;
+        position: relative;
+        top: -6px;
+    }
+    
+    
+    /*Submenu*/
+    
+    .submenu-ul{   
+        /*z-index: 1;         */
+        width: 300px;
+        position: absolute;    
+        left: 0;
+        flex-direction: column;
+        border: 1px solid #eeeeee;
+        background: white;
+        border-bottom: 1px solid #e7e5e5;
+        padding: 10px;
+    }
+    .submenu-ul :hover{               
+        border-bottom: 1px solid #eeeeee;    
+        border-top: 1px solid #eeeeee;    
+        /*border-left: none;
+        border-right: none;*/
+        
+    }
+    
+    /*
+    .menu ul li ul ,li{
+        padding: 10px 20px;
+        border-bottom: 1px solid #eeeeee;
+        font-weight: 100;
+        font-size: 14px;
+        position: relative;
+    }
+    */
+    .submenu-ul-li{
+        padding: 10px 20px;
+        border-bottom: 1px solid #eeeeee;
+        font-weight: 100;
+        font-size: 14px;
+        position: relative;
+    }
+    
+    .menu ul li ul ,li:hover{
+        background: #FAFAFA;    
+    }
+    
+    /*
+    .menu ul li ul li ul{
+        position: absolute;
+        left: 287px;
+        top: 0;
+    }*/
+    .submenu-web-ul-li-ul{
+        position: absolute;
+        left: 287px;    
+        top: 0px;
+    
+    }
     
 }
-
-.menu ul li ,span{
-    font-size: 14px;
-    position: relative;    
-}
-
-.menu ul li ,label{
-    font-size: 25px;
-    position: relative;
-    top: -6px;
-}
-
-
-/*Submenu*/
-
-.submenu-ul{   
-    /*z-index: 1;         */
-    width: 300px;
-    position: absolute;    
-    left: 0;
-    flex-direction: column;
-    border: 1px solid #eeeeee;
-    background: white;
-    border-bottom: 1px solid #e7e5e5;
-    padding: 10px;
-}
-.submenu-ul :hover{               
-    border-bottom: 1px solid #eeeeee;    
-    border-top: 1px solid #eeeeee;    
-    /*border-left: none;
-    border-right: none;*/
-    
-}
-
-/*
-.menu ul li ul ,li{
-    padding: 10px 20px;
-    border-bottom: 1px solid #eeeeee;
-    font-weight: 100;
-    font-size: 14px;
-    position: relative;
-}
-*/
-.submenu-ul-li{
-    padding: 10px 20px;
-    border-bottom: 1px solid #eeeeee;
-    font-weight: 100;
-    font-size: 14px;
-    position: relative;
-}
-
-.menu ul li ul ,li:hover{
-    background: #FAFAFA;    
-}
-
-/*
-.menu ul li ul li ul{
-    position: absolute;
-    left: 287px;
-    top: 0;
-}*/
-.submenu-web-ul-li-ul{
-    position: absolute;
-    left: 287px;    
-    top: 0px;
-
-}
-/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
-/*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*//////////////////////////////////MOVIL/////////////////////////////////////////////////////////////////////////////*/
 /*/////////////////////////////////////////////////////////////////////////////////////////////////////////////////*/
 
 @media screen and (max-width: 700px){  
-        
-    header{
-        height: max-content;
-    }
-    .container-header{      
-        padding: 0px 0px 0px 0px;          
-        position: relative;
-            
-    }   
-    .menu-button{        
-        display: block;        
-    }     
-        
-    .menu-button i{    
-        font-size: 1.9em;
-        margin-top: 18px;            
-        display: relative;
+
+@import url(https://use.fontawesome.com/releases/v5.0.6/css/all.css);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400|Raleway:400,700,400italic,700italic);
+
+    .container-menu{
+        display: none;
     }
    
-    
-    .container-logo-title{   
-        display: flex;
-        margin: auto;        
+    .container-header{
+        padding: 0;  
+        text-align: center;      
         justify-content: center;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 0px;
-        margin-top: 0px;
-        font-size: 1em;        
-    }
-    .container-logo-title img{               
+        width: 100%;        
+    }   
+
+    #main-movil {
         padding-top: 10px;
-        width: 15%;
-        height: 15%;
+        padding-bottom: 10px;
+        border-radius: none;
+        background: #e5e5e5;     
+        background: transparent;   
+        color: #1d1f20;        
+        width: 100px;
+        margin: auto;        
+        position: absolute;               
+        max-width: auto;
+        z-index: 9999;    
     }
-   
-    .container-logo-title h1{   
-        font-size: 2em;
-    }    
-   
-    .container-menu{       
-        display: none;    
-        margin-top: 0px;
-        margin-left: -10px;
-        top: 0; 
-        width: 200px;
-        position: fixed;
-        background-color: #2D2F30;         
+    /*** INPUT ***/
+    nav #main-movil ,input {  
+    opacity: 0;
+    position: absolute;
+    z-index: -1;    
     }
-    .menu{    
-        width: auto;                             
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        background-color: #2D2F30;     
-        margin-top: 0px;    
-    }
-        /*
-        .menu ,ul{
-            flex-direction: column;
-        }*/
+    
+/*** LABEL ***/
+nav #main-movil, label{    
+    margin-bottom: 0;
+    width: 65px;        
+    cursor: pointer;
+    display: inline-block;
+    font: 2em/1 'Oswald', sans-serif;
+    padding: 0.5em;
+}
+.container-menu-movil{     
+    margin: 0px;    
+    padding-bottom: -200px;       
+}
 
-    .menu-ul{        
-        flex-direction: column;
-    }
-    .menu-ul li{
-        color: white;
-    }
-    /*
-    .menu ul li ,ul{
-        position:relative;
-    }
-    */
-    .submenu-ul{    
-        width: 100%;
-        position: relative;
-        background-color: #2D2F30; 
-        border: none;  
-        padding: 2px; 
-        
-    }
-    .submenu-ul-li{    
-        border-bottom:  1px solid #52525252;    
-            
-    }
-    .submenu-ul :hover{
-        border: 1px solid transparent;
-        border-top: 4px, solid transparent;       
-    }
-    .menu ul li ul ,li:hover{
-        background-color: #363636;
-    }
-    /*
-    .menu ul li ul li ul{
-        position: relative;
-    }*/
-    .submenu-web-ul-li-ul{  
-        width: 100%;
-        border-bottom: 1px, solid #414141;        
-        position: relative;      
-        border: none;    
-        left: 0px; 
 
-    }
+/* Hamburger Icon */
+#menu-icon,
+#menu-icon:before,
+#menu-icon:after{
+  
+    background: #ff8a04;
+    border-radius: 0.05em;
+    height: 0.2em;
+    transition: all 0.2s ease-in-out;    
+    width: 100%;       
+}
 
+#menu-icon {    
+    display: inline-block;    
+    margin: 0.4em 0;
+    max-width: 1.5em;
+    position: relative;
+}
+
+nav #main-movil label ,#menu-icon {    
+    position: relative;
+ 
+    margin-top: 50px;
+}
+
+#menu-icon:before,
+#menu-icon:after {
+    content: '';
+    left: 0;
+    position: absolute;
+}
+
+#menu-icon:before {
+    top: -0.4em;
+}
+
+#menu-icon:after {
+    bottom: -0.4em;
+}
+
+/* Close Icon */
+nav #main-movil ,input[type=checkbox]:checked + label #menu-icon {
+    background: transparent;
+}
+
+nav #main-movil ,input[type=checkbox]:checked + label #menu-icon:before {
+    top: 0;
+    transform: rotate(-45deg);
+}
+
+nav #main-movil ,input[type=checkbox]:checked + label #menu-icon:after {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+
+
+/*** MENU ***/
+/* Overlay */
+
+/* List */
+nav #main-movil ,ul {        
+    font-size: 1.5em;
+    list-style: none;
+    margin: 0;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0;
+    text-align: center;
+}
+
+nav #main-movil ,input:checked ~ ul {    
+    transition:  all 1s;    
+    max-height: inherit;
+    opacity: 1;
+    
+}
+nav #main-movil ,input:checked ~ ul#social-media > li {    
+    display: inline-block;
+    
+}
+
+
+nav #main-movil ,ul > li {    
+    margin: 0.5em 0;    
+}
+
+nav #main-movil ,ul a {        
+    color: #1d1f20!important;
+    text-decoration: none;
+}
+
+nav #main-movil ,ul a:hover {    
+    text-decoration: underline;
+}
+i:hover{
+    color : white;
+}
+/* Social Media */
+
+nav #main-movil ,ul#social-media > li {           
+    display: none;
+    font-size: 1.5em;
+    margin: 0.5em;           
+}
+           
 }
