--- a/css/buttom_menu.css
+++ b/css/buttom_menu.css
@@ -12,7 +12,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: none;
-    background: #e5e5e5;
+    background: #2c2c2c;
     color: #1d1f20;
     left: 0;
     position: relative;
