GOlden _bee_original

--- a/css/buttom_menu.css
+++ b/css/buttom_menu.css
@@ -16,12 +16,11 @@
     color: #1d1f20;
     left: 0;
     position: relative;
-    top: 0;    
+    top: 0;
+    
     max-width: auto;
     z-index: 9999;    
-    display: none;       
 }
-
 
 /*** INPUT ***/
 nav #main-movil ,input {
@@ -34,19 +33,18 @@ nav #main-movil ,input {
 /*** LABEL ***/
 nav #main-movil, label{    
     margin-bottom: 0;
-    width: 65px;        
+    width: 65px;    
     cursor: pointer;
     display: inline-block;
     font: 2em/1 'Oswald', sans-serif;
-    padding: 0.5em;    
+    padding: 0.5em;
 }
 .container-menu-movil {
     justify-content: center;
     align-items: center;
     margin:  auto;
     max-width: auto;      
-    padding: 10px;   
-    
+    padding: 10px;
 }
 
 
@@ -58,33 +56,34 @@ nav #main-movil, label{
     border-radius: 0.05em;
     height: 0.2em;
     transition: all 0.2s ease-in-out;    
-    width: 100%;                
+    width: 100%;            
 }
 
 #menu-icon {    
     display: inline-block;
     margin: 0.4em 0;
     max-width: 1em;
-    position: relative;        
+    position: relative;
 }
 
-
+nav #main-movil label ,#menu-icon {
+    float: left;    
+}
 
 #menu-icon:before,
 #menu-icon:after {
     content: '';
     left: 0;
-    position: absolute;  
+    position: absolute;
 }
 
 #menu-icon:before {
-    top: -0.4em;    
+    top: -0.4em;
 }
 
 #menu-icon:after {
     bottom: -0.4em;
 }
-
 
 /* Close Icon */
 nav #main-movil ,input[type=checkbox]:checked + label #menu-icon {
