--- a/css/main.css
+++ b/css/main.css
@@ -1,85 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,400');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
-}
 body{		
 	font-family: 'Kaushan Script', cursive;
 	font-family: 'Lato', sans-serif;
 	font-family: 'Zilla Slab', serif;
-	background-color: #07070A;
-	/*-webkit-user-select: none;*/
-	/*background-image: url(../imgs/fondo-portada.jpg);
-	background-size: cover;	
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-	*/
-	color: white;
-}
+	-webkit-user-select: none;
 	
-
+}
 main{				
 	padding: 10px;				
 }
-.container-esquema{	
-	width: 100%;	
-	position: relative;
-	
-}
-.img-esquema{
-	margin-top: -2px;
-	width:  100%;
-	height: auto;
-	position: fixed;	
-	z-index: -3;
-}
-.grad1{
-	position: absolute;
-	width: 100%;
-	height: max-content;        
-	/*backdrop-filter:  blur(4px);*/
-	/*background-color: rgba(26, 26, 26, 0.7); ;*/	
-	display: block;    
-  	background-image: linear-gradient(to top, rgba(7,7,10,0.9),  rgba(7,7,10,0.9), rgba(7,7,10,0.85), rgba(7,7,10,0.8), rgba(7,7,10,0.7), rgba(7,7,10,0.0));
-	z-index: -1;
-}
-
-.img-foto{
-	width: 100%;
-	position: fixed;
-	z-index: -2;
-}
-
+.conten
 #info-title{
 	color: #E0A023;
-	margin-top: 200px;
+	margin-top: 20px;
 	font-size: 5em;
 }
-#zumbido {		
-	width: auto;	
-	height: 40%;
-	z-index: 20;
+#zumbido{	
 	cursor: pointer;
 }
-
 
 #zumbido:active {	
 	animation: step-start;
 	animation-duration: 0.2s;
 }
 
-/*
 #img-home{	
 	margin-top: 60px;
 	width: 30%;
 	border-radius: 60%;   	
 	box-shadow: none;	 			
 }
-*/
 
 a{
 	color:#F2D02F;
@@ -99,7 +48,9 @@ article{
   /*border: 3px solid green;*/
   padding: 10px;
 }
-
+.espacio-arriba{
+	margin-top:50px;
+}
 .fuente-kaushan{
 	font-family: 'Kaushan Script', cursive;
 }
@@ -186,7 +137,7 @@ h2{
 /*	INFO CONTAINER INFORMACION NORMAL DE LA PAGINA WEB*/
 .info-container{
 	text-align: center;
-	 margin-top: 120px;
+	 margin-top: 80px;
 }
 .img-logo{	
 	width: 9%;		
@@ -216,7 +167,7 @@ figure{
 	max-width: 320px;		
 	max-height: max-content;	
 	margin: 10px;
-	background-color: rgb(24, 23, 23);
+	background-color: rgb(219, 216, 216);
 	border-radius: 20px;
 	border-width: 200px;
 	padding: 10px;
@@ -322,7 +273,7 @@ span{
 		padding-top: 15px;
 		padding-bottom: 0px;
 		margin-left: -10px;		
-		background-color: rgb(32, 32, 32);		
+		background-color: rgb(219, 216, 216);		
 		border-radius: 20px;	
 		z-index: 0;
 	}
@@ -351,12 +302,6 @@ span{
 /*movil///////////////////////////////////////////*/
 /*movil///////////////////////////////////////////*/
 @media screen and (max-width: 700px){	 
-	#zumbido {		
-		width: auto;	
-		height: 25%;
-		z-index: 20;
-		cursor: pointer;
-	}
 
 	#beepc{					
 		width:  10%;
